# SensoPy

./: .flake8  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  LICENSE.txt  MANIFEST  README.md  ROADMAP.md  codecov.yml  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: constraints.txt  tests.yml
sensopy/: __init__.py  discrim.py  methods.py  mplusn.py  sim2outof5.py
sensopy/discrim/: __init__.py  discrim.py  methods.py
sensopy/discrimination/: discrimination.py  mplusn.py
sensopy/scripts/: Thurstone-d'.csv  d,B.csv  d-table.py  diff_power.csv  diff_power.xlsx  pc.py  power_simi.py  simi_power.csv
src/sensopy/: __init__.py
src/sensopy/discrimination/: __init__.py  discrimination.py  methods.py  mplusn.py
tests/: conftest.py
tests/discrimination/: test_discrimination_test.py  test_methods.py  test_psychometric_functions.py
