[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "sensopy"
description = "Python library for the design and analysis of sensory discrimination tests."
readme = "README.md"
keywords = [
  "discrimination",
  "sensory",
  "triangle",
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.urls]
"Issue Tracker" = "https://github.com/edgarrmondragon/SensoPy/issues"

[dependency-groups]
dev = [
  { include-group = "tests" },
  { include-group = "typing" },
]
tests = [
  "coverage[toml]>=7.13",
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.4",
]
typing = [
  "mypy>=1.20",
  "scipy-stubs>=1",
  "ty>=0.0.27",
  { include-group = "tests" },
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 100
preview = true
[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C",
  "C4",
  "D",
  "DOC",
  "E",
  "ERA",
  "F",
  "FURB",
  "FA",
  "FLY",
  "I",
  "ICN",
  "ISC",
  "N",
  "NPY",
  "PERF",
  "PIE",
  "PT",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "TC",
  "UP",
  "W",
]
ignore = []
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-undocumented-public-function
  "S101",   # assert
]
unfixable = [
  "ERA",
]
flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true
flake8-annotations.suppress-dummy-args = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-ra",
  "-vvv",
  "--durations=3",
]
filterwarnings = [
  "error",
  "once:The iteration is not making good progress:RuntimeWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.coverage.paths]
package = [
  "src/sensopy/",
  "*/site-packages/sensopy/",
]
[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = [
  "@abstractmethod",
  "@abstractproperty",
  "if (t\\.)?TYPE_CHECKING:",
]
[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = [
  "sensopy",
]

[tool.tox]
requires = [
  "tox>=4.52",
  "tox-uv>=1",
]
env_list = [
  "type",
  { product = [
    { prefix = "3.", start = 10 },
  ] },
  "lowest",
  "coverage",
]
[tool.tox.env.coverage]
description = "combine coverage data and report"
skip_install = true
depends = [ "3.*" ]
commands = [
  [ "coverage", "combine", "--debug=pathmap" ],
  [ "coverage", "report" ],
  [ "coverage", "xml" ],
]

[tool.tox.env.lowest]
description = "test lowest supported dependencies on Python {py_dot_ver}"
base_python = "3.10"
base_python_file = []
uv_resolution = "lowest-direct"
[tool.tox.env.type]
description = "type check with mypy"
dependency_groups = [ "typing" ]
commands = [
  [ "mypy", "src/sensopy", "tests" ],
  [ "ty", "check" ],
]

[tool.tox.env_run_base]
description = "run tests on Python {py_dot_ver}"
pip_pre = true
base_python_file = [ ".python-version" ]
dependency_groups = [ "tests" ]
commands = [
  [ "coverage", "run", "-m", "pytest" ],
]
